# livelybot_robot

./: 装配备忘录.md
src/livelybot_bringup/launch/: robot_node_12.launch  robot_node_18.launch  robot_node_20.launch  robot_node_20_leg6motor.launch  test_motor_run.launch  use_joy_control.launch
src/livelybot_controller/: CMakeLists.txt  package.xml
src/livelybot_controller/ConvexMPC/: Constraints.cpp  ConvexMPCLocomotion.cpp  ConvexMPCLocomotion.h  SolverMPC.cpp
src/livelybot_controller/include/common/: Biped.h
src/livelybot_controller/include/interface/: IOInterface.h  PaiIO.h
src/livelybot_controller/src/: main.cpp
src/livelybot_controller/src/FSM/: FSM.cpp
src/livelybot_controller/src/common/: LegController.cpp
src/livelybot_controller/src/interface/: PaiIO.cpp
src/livelybot_description/launch/: livelybot_description.launch
src/livelybot_description/robot_param/: 10dof_STM32H730_model_P_Hector_params copy.yaml  10dof_STM32H730_model_P_Hector_params.yaml  20dof_STM32H730_model_H_Hector_params.yaml  20dof_STM32H730_model_H_Hector_params_leg6motor.yaml  6dof_STM32H730_model_HL06_Orin_params.yaml
src/livelybot_gazebo/: CMakeLists.txt  package.xml
src/livelybot_gazebo/launch/: new_b.launch  new_b2.launch
src/livelybot_gazebo_controller/: CMakeLists.txt  livelybot_gazebo_controller_plugins.xml  package.xml
src/livelybot_gazebo_controller/include/: motor_controller.h
src/livelybot_gazebo_controller/src/: livelybot_gazebo_motor_control_tool.cpp  motor_controller.cpp
src/livelybot_imu/: CMakeLists.txt
src/livelybot_imu/config/: imu.rviz
src/livelybot_imu/include/: ahrs_driver.h
src/livelybot_imu/launch/: livelybot_imu_driver.launch  livelybot_imu_driver_rviz.launch  tf.launch
src/livelybot_imu/src/: ahrs_driver.cpp  test_eigen.cpp
src/livelybot_serial/: CMakeLists.txt
src/livelybot_serial/include/: robot_node.h
src/livelybot_serial/include/hardware/: motor.h  robot.h
src/livelybot_serial/src/: ik_run.cpp  robot_node.cpp  serial_t.cpp  test_2dof_ankle.cpp  test_motor_combi_pos_vel.cpp  test_motor_run_18.cpp  test_motor_run_20.cpp  test_motor_torque.cpp
src/livelybot_serial/src/hardware/: motor.cc
